# Image_processing.cpp

./: CMakeLists.txt  Image_Class.cpp  Image_Class.h  README.md  filters.cpp  filters.h  main.cpp  widget.cpp  widget.h  widget.ui
